// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`目标组单动作解析 > ContinuousFindTargetAction 保留 owner-spawned 实体及有符号 Tag 身份 1`] = `
{
  "actionIndex": 7,
  "actionPath": [
    "timelineActions[0]",
    "_sequenceActionData",
    "actionData",
    "[0]",
  ],
  "center": "ActionSource",
  "centerContextKey": "",
  "characterTeamSelection": null,
  "circularOrderDesiredCount": null,
  "circularOrderHeightOffset": null,
  "circularOrderIndexKey": null,
  "circularOrderRangeCheckTarget": null,
  "circularOrderRangeThreshold": null,
  "circularOrderReverseFlag": null,
  "distanceValidators": [],
  "distanceValidatorsPassAtZero": false,
  "endFrame": 8,
  "excludesCurrentTarget": false,
  "excludesOwner": false,
  "finderCheckAlive": null,
  "finderFactionTarget": null,
  "finderFixedPointSnapToNavmesh": null,
  "finderOwnerPartsQuery": null,
  "finderShape": null,
  "finderSpawnedObjectType": "AbilityEntity",
  "finderTargetObjectType": null,
  "finderType": "OwnerSpawnedEntityFinder",
  "inputTargets": [],
  "intervalSeconds": 0.1,
  "pickIndexBlackboardKey": null,
  "pickIndexValue": null,
  "postProcessorTypes": [],
  "priorityFilterMaxTargets": null,
  "priorityFilters": [],
  "producerType": "ContinuousFindTargetAction",
  "saveCountToBlackboardKey": null,
  "selectorOwner": "ActionOwner",
  "selectorOwnerContextKey": "",
  "shuffleTargets": [],
  "smartTargetFallsBackToMainTarget": false,
  "startFrame": 3,
  "targetGroupKey": "lances",
  "validatorTagQueries": [
    [
      "HasAny",
      [
        -549424863,
      ],
    ],
  ],
  "validatorTypes": [
    "TagValidator",
  ],
}
`;

exports[`目标组单动作解析 > FindTargetAction 保留 owner-spawned 实体及有符号 Tag 身份 1`] = `
{
  "actionIndex": 7,
  "actionPath": [
    "timelineActions[0]",
    "_sequenceActionData",
    "actionData",
    "[0]",
  ],
  "center": "ActionSource",
  "centerContextKey": "",
  "characterTeamSelection": null,
  "circularOrderDesiredCount": null,
  "circularOrderHeightOffset": null,
  "circularOrderIndexKey": null,
  "circularOrderRangeCheckTarget": null,
  "circularOrderRangeThreshold": null,
  "circularOrderReverseFlag": null,
  "distanceValidators": [],
  "distanceValidatorsPassAtZero": false,
  "endFrame": 8,
  "excludesCurrentTarget": false,
  "excludesOwner": false,
  "finderCheckAlive": null,
  "finderFactionTarget": null,
  "finderFixedPointSnapToNavmesh": null,
  "finderOwnerPartsQuery": null,
  "finderShape": null,
  "finderSpawnedObjectType": "AbilityEntity",
  "finderTargetObjectType": null,
  "finderType": "OwnerSpawnedEntityFinder",
  "inputTargets": [],
  "intervalSeconds": null,
  "pickIndexBlackboardKey": null,
  "pickIndexValue": null,
  "postProcessorTypes": [],
  "priorityFilterMaxTargets": null,
  "priorityFilters": [],
  "producerType": "FindTargetAction",
  "saveCountToBlackboardKey": null,
  "selectorOwner": "ActionOwner",
  "selectorOwnerContextKey": "",
  "shuffleTargets": [],
  "smartTargetFallsBackToMainTarget": false,
  "startFrame": 3,
  "targetGroupKey": "lances",
  "validatorTagQueries": [
    [
      "HasAny",
      [
        -549424863,
      ],
    ],
  ],
  "validatorTypes": [
    "TagValidator",
  ],
}
`;

exports[`目标组单动作解析 > HitBox、零距离验证和 PriorityFilter 事实保持已验证结构 1`] = `
{
  "actionIndex": 7,
  "actionPath": [
    "timelineActions[0]",
    "_sequenceActionData",
    "actionData",
    "[0]",
  ],
  "center": "ActionSource",
  "centerContextKey": "",
  "characterTeamSelection": null,
  "circularOrderDesiredCount": null,
  "circularOrderHeightOffset": null,
  "circularOrderIndexKey": null,
  "circularOrderRangeCheckTarget": null,
  "circularOrderRangeThreshold": null,
  "circularOrderReverseFlag": null,
  "distanceValidators": [],
  "distanceValidatorsPassAtZero": true,
  "endFrame": 8,
  "excludesCurrentTarget": false,
  "excludesOwner": false,
  "finderCheckAlive": true,
  "finderFactionTarget": "Enemy",
  "finderFixedPointSnapToNavmesh": null,
  "finderOwnerPartsQuery": null,
  "finderShape": null,
  "finderSpawnedObjectType": null,
  "finderTargetObjectType": "Character",
  "finderType": "HitBoxFinder",
  "inputTargets": [],
  "intervalSeconds": null,
  "pickIndexBlackboardKey": null,
  "pickIndexValue": null,
  "postProcessorTypes": [
    "PriorityFilter",
  ],
  "priorityFilterMaxTargets": 1,
  "priorityFilters": [],
  "producerType": "FindTargetAction",
  "saveCountToBlackboardKey": null,
  "selectorOwner": "ActionOwner",
  "selectorOwnerContextKey": "",
  "shuffleTargets": [],
  "smartTargetFallsBackToMainTarget": false,
  "startFrame": 3,
  "targetGroupKey": "targets",
  "validatorTagQueries": [],
  "validatorTypes": [
    "DistanceValidator",
  ],
}
`;

exports[`目标组单动作解析 > MergeTargetAction 保留每个输入目标的原生身份 1`] = `
{
  "actionIndex": 4,
  "actionPath": [
    "timelineActions[0]",
    "_sequenceActionData",
    "actionData",
    "[0]",
  ],
  "center": null,
  "centerContextKey": "",
  "characterTeamSelection": null,
  "circularOrderDesiredCount": null,
  "circularOrderHeightOffset": null,
  "circularOrderIndexKey": null,
  "circularOrderRangeCheckTarget": null,
  "circularOrderRangeThreshold": null,
  "circularOrderReverseFlag": null,
  "distanceValidators": [],
  "distanceValidatorsPassAtZero": false,
  "endFrame": 8,
  "excludesCurrentTarget": false,
  "excludesOwner": false,
  "finderCheckAlive": null,
  "finderFactionTarget": null,
  "finderFixedPointSnapToNavmesh": null,
  "finderOwnerPartsQuery": null,
  "finderShape": null,
  "finderSpawnedObjectType": null,
  "finderTargetObjectType": null,
  "finderType": null,
  "inputTargets": [
    {
      "distanceValidators": [],
      "finderCheckAlive": null,
      "finderFactionTarget": null,
      "finderOwnerPartsQuery": null,
      "finderShape": null,
      "finderSpawnedObjectType": null,
      "finderTargetObjectType": null,
      "finderType": null,
      "postProcessorTypes": [],
      "priorityFilters": [],
      "shuffleTargets": [],
      "targetGroupKey": "first",
      "targetSource": "Context",
      "validatorTagQueries": [],
      "validatorTypes": [],
    },
    {
      "distanceValidators": [],
      "finderCheckAlive": null,
      "finderFactionTarget": null,
      "finderOwnerPartsQuery": null,
      "finderShape": null,
      "finderSpawnedObjectType": null,
      "finderTargetObjectType": null,
      "finderType": null,
      "postProcessorTypes": [],
      "priorityFilters": [],
      "shuffleTargets": [],
      "targetGroupKey": "",
      "targetSource": "Target",
      "validatorTagQueries": [],
      "validatorTypes": [],
    },
  ],
  "intervalSeconds": null,
  "pickIndexBlackboardKey": null,
  "pickIndexValue": null,
  "postProcessorTypes": [],
  "priorityFilterMaxTargets": null,
  "priorityFilters": [],
  "producerType": "MergeTargetAction",
  "saveCountToBlackboardKey": null,
  "selectorOwner": null,
  "selectorOwnerContextKey": "",
  "shuffleTargets": [],
  "smartTargetFallsBackToMainTarget": false,
  "startFrame": 3,
  "targetGroupKey": "combined",
  "validatorTagQueries": [],
  "validatorTypes": [],
}
`;

exports[`目标组单动作解析 > PickTargetAction 保留直接索引或黑板索引 1`] = `
{
  "actionIndex": 5,
  "actionPath": [
    "timelineActions[0]",
    "_sequenceActionData",
    "actionData",
    "[0]",
  ],
  "center": null,
  "centerContextKey": "",
  "characterTeamSelection": null,
  "circularOrderDesiredCount": null,
  "circularOrderHeightOffset": null,
  "circularOrderIndexKey": null,
  "circularOrderRangeCheckTarget": null,
  "circularOrderRangeThreshold": null,
  "circularOrderReverseFlag": null,
  "distanceValidators": [],
  "distanceValidatorsPassAtZero": false,
  "endFrame": 8,
  "excludesCurrentTarget": false,
  "excludesOwner": false,
  "finderCheckAlive": null,
  "finderFactionTarget": null,
  "finderFixedPointSnapToNavmesh": null,
  "finderOwnerPartsQuery": null,
  "finderShape": null,
  "finderSpawnedObjectType": null,
  "finderTargetObjectType": null,
  "finderType": null,
  "inputTargets": [
    {
      "distanceValidators": [],
      "finderCheckAlive": null,
      "finderFactionTarget": null,
      "finderOwnerPartsQuery": null,
      "finderShape": null,
      "finderSpawnedObjectType": null,
      "finderTargetObjectType": null,
      "finderType": null,
      "postProcessorTypes": [],
      "priorityFilters": [],
      "shuffleTargets": [],
      "targetGroupKey": "combined",
      "targetSource": "Context",
      "validatorTagQueries": [],
      "validatorTypes": [],
    },
  ],
  "intervalSeconds": null,
  "pickIndexBlackboardKey": "pick_index",
  "pickIndexValue": 0,
  "postProcessorTypes": [],
  "priorityFilterMaxTargets": null,
  "priorityFilters": [],
  "producerType": "PickTargetAction",
  "saveCountToBlackboardKey": null,
  "selectorOwner": null,
  "selectorOwnerContextKey": "",
  "shuffleTargets": [],
  "smartTargetFallsBackToMainTarget": false,
  "startFrame": 3,
  "targetGroupKey": "picked",
  "validatorTagQueries": [],
  "validatorTypes": [],
}
`;

exports[`目标组单动作解析 > 收集器关联同层 CheckEntityNum 的数量写回键 1`] = `
[
  {
    "actionIndex": 4,
    "actionPath": [
      "timelineActions[0]",
      "_sequenceActionData",
      "actionData",
      "[0]",
    ],
    "center": null,
    "centerContextKey": "",
    "characterTeamSelection": null,
    "circularOrderDesiredCount": null,
    "circularOrderHeightOffset": null,
    "circularOrderIndexKey": null,
    "circularOrderRangeCheckTarget": null,
    "circularOrderRangeThreshold": null,
    "circularOrderReverseFlag": null,
    "distanceValidators": [],
    "distanceValidatorsPassAtZero": false,
    "endFrame": 8,
    "excludesCurrentTarget": false,
    "excludesOwner": false,
    "finderCheckAlive": null,
    "finderFactionTarget": null,
    "finderFixedPointSnapToNavmesh": null,
    "finderOwnerPartsQuery": null,
    "finderShape": null,
    "finderSpawnedObjectType": null,
    "finderTargetObjectType": null,
    "finderType": null,
    "inputTargets": [
      {
        "distanceValidators": [],
        "finderCheckAlive": null,
        "finderFactionTarget": null,
        "finderOwnerPartsQuery": null,
        "finderShape": null,
        "finderSpawnedObjectType": null,
        "finderTargetObjectType": null,
        "finderType": null,
        "postProcessorTypes": [],
        "priorityFilters": [],
        "shuffleTargets": [],
        "targetGroupKey": "",
        "targetSource": "Target",
        "validatorTagQueries": [],
        "validatorTypes": [],
      },
    ],
    "intervalSeconds": null,
    "pickIndexBlackboardKey": null,
    "pickIndexValue": null,
    "postProcessorTypes": [],
    "priorityFilterMaxTargets": null,
    "priorityFilters": [],
    "producerType": "MergeTargetAction",
    "saveCountToBlackboardKey": "target_count",
    "selectorOwner": null,
    "selectorOwnerContextKey": "",
    "shuffleTargets": [],
    "smartTargetFallsBackToMainTarget": false,
    "startFrame": 3,
    "targetGroupKey": "combined",
    "validatorTagQueries": [],
    "validatorTypes": [],
  },
]
`;

exports[`黑板运行时动作载荷 > ModifyDynamicBlackboard 锁定已验证的对象级结构 1`] = `
{
  "key": "hit_count",
  "operation": "Add",
  "value": {
    "blackboardKey": null,
    "levelValues": null,
    "value": 1,
  },
}
`;

exports[`黑板运行时动作载荷 > SimpleCalcBBAction 锁定已验证的对象级结构 1`] = `
{
  "addend": null,
  "key": "final_scale",
  "left": {
    "blackboardKey": "atk_scale",
    "levelValues": [
      1,
      1.1,
      1.2,
    ],
    "value": 0,
  },
  "operation": "Multiply",
  "right": {
    "blackboardKey": null,
    "levelValues": null,
    "value": 1.5,
  },
}
`;
